*: Fix broken styles caused by antd update (#1162)

--- a/ui/dashboardApp/layout/main/Sider/index.module.less
+++ b/ui/dashboardApp/layout/main/Sider/index.module.less
@@ -45,7 +45,7 @@
         background: rgba(darken(@sider-background, 30%), 0.15);
       }
 
-      > a {
+      a {
         color: #666;
 
         &:hover {
@@ -56,7 +56,7 @@
       &.ant-menu-item-selected {
         background: rgba(darken(@sider-background, 30%), 0.15);
 
-        > a {
+        a {
           color: #000;
         }
       }
